# dotfiles

./: .gitignore
nvim/: init.lua
nvim/lua/: keybinds.lua  lsp.lua  plugins.lua
tmux/: tmux.conf
xmonad/: CHANGELOG.md  br3akp01nt-xmonad-config  br3akp01nt-xmonad-config.cabal  cabal.project.local
xmonad/app/: Main.hs
xmonad/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
xmonad/lib/XMonad/Br3akp01nt/: Programs.hs
zsh/: .zshrc
