cabal-version:      2.4
name:               br3akp01nt-xmonad-config
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Br3akp01nt
maintainer:         br3akp01nt@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: lib
    
    exposed-modules:  
        XMonad.Br3akp01nt.Programs

    -- Modules included in this library but not exported.
    other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: 
        base ^>=4.15.1.0,
        xmonad,
        xmonad-contrib
    hs-source-dirs:   lib
    default-language: Haskell2010


executable br3akp01nt-xmonad-config
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0,
                      br3akp01nt-xmonad-config,
                      xmonad,
                      xmonad-contrib,
                      time
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:

