cabal-version:      3.4
name:               br3akp01nt-xmonad-config
version:            0.1.0.0
author:             Br3akp01nt
maintainer:         br3akp01nt@protonmail.com
extra-source-files: CHANGELOG.md

executable br3akp01nt-xmonad-config
    main-is:          Main.hs
    build-depends:    base ^>=4.19.1.0,
                      br3akp01nt-xmonad-config:lib,
                      xmonad,
                      xmonad-contrib,
                      time
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:

library lib
    hs-source-dirs:   lib
    exposed-modules:  XMonad.Br3akp01nt.Programs
    other-modules:
    build-depends:    base ^>=4.19.1.0,
                      xmonad,
                      xmonad-contrib
    hs-source-dirs:   lib
    default-language: Haskell2010

